--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#jmix.rest.allowedOrigins = http://localhost:3000
+
 #????????? ????: secret
 jwt.token.secret=secret
 #????? ????? ??????: 1???
